--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.mvc.hiddenmethod.filter.enabled=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/first_db
+spring.datasource.username=postgres
+spring.datasource.password=root
